Resolved Setting overlap issue

--- a/admin/assets/common-block-editor.css
+++ b/admin/assets/common-block-editor.css
@@ -162,7 +162,7 @@ hr.uagb-editor__separator {
 .uagb-size-type-field-tabs .components-tab-panel__tabs {
 	border-bottom: 0;
 	text-align: right;
-	margin-right: 40px;
+	margin-right: 10px;
 	margin-bottom: -20px;
 	display: block;
 }
